Added root execute to prometheus container

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,6 +43,7 @@ services:
   # Prometheus
   prometheus:
     image: prom/prometheus:latest
+    user: root 
     restart: unless-stopped
     ports:
       - "9090:9090"
